--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,15 +10,10 @@
   <%= @user.lastname %>
 </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
 
 <p>
   <strong>Numero:</strong>
   <%= @user.numero %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Index', users_path %>
