--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,24 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>">
+      <%= value %>
+    </div>
+  <% end %>
+</div>
+
+<%= yield :top_content %>
+
+<div class="container outer-page-content">
+  <div class="container page-header">
+    <h1><%= yield :header %></h1>
+  </div>
+  <div class="container inner-page-content">
+  <%= yield %>
+  </div>
+</div>
 
 </body>
 </html>
