--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,35 @@
-<p id="notice"><%= notice %></p>
+<% content_for :top_content do %>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome!</h1>
+      <p>Register to get started.</p>
+      <p>
+        <%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
+      </p>
+    </div>
+  </div>
+<% end %>
 
-<h1>Listing Users</h1>
+
+<% content_for header: "Listing Users" %>
+<% header "Listing Users" %>
+
 
 <table>
   <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <th>Name</th>
       <th>Email</th>
       <th>Numero</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.firstname %></td>
-        <td><%= user.lastname %></td>
+        <td><%= link_to user.name,user %></td>
         <td><%= user.email %></td>
         <td><%= user.numero %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +37,3 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
