--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing User</h1>
+<% header "Formulaire d'édition pour #{@user.lastname}, #{@user.firstname}" %>
+<% page_title "Formulaire utilisateur pour #{@user.firstname} #{@user.lastname}" %>
 
 <%= render 'form' %>
 
