--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,13 @@
-<% content_for :top_content do %>
-  <div class="jumbotron">
-    <div class="container">
-      <h1>Welcome!</h1>
-      <p>Register to get started.</p>
-      <p>
-        <%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
-      </p>
-    </div>
-  </div>
-<% end %>
-
-
-<% content_for header: "Listing Users" %>
 <% header "Listing Users" %>
+<% page_title " user listing" %>
 
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nom</th>
       <th>Email</th>
-      <th>Numero</th>
+      <th>Numéro</th>
       <th></th>
     </tr>
   </thead>
